nice plot for wilderness type

--- a/complete/Forest-Cover/analysis.ipynb
+++ b/complete/Forest-Cover/analysis.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -82,6 +82,7 @@
     "\n",
     "train = pd.read_csv(DATA_PATH + \"train.csv\")\n",
     "test  = pd.read_csv(DATA_PATH + \"test.csv\")\n",
+    "predictions = pd.read_csv(DATA_PATH + \"predictions.csv\")\n",
     "\n",
     "cat_columns = [col for col in train.columns if train[col].dtype == object]\n",
     "print(\"Categorical columns:\")\n",
@@ -671,6 +672,13 @@
     "                         alt.value('lightgray'), scale=palette))\n",
     " .properties(selection=click, width=700, title=\"Cover Type\")\n",
     " .interactive())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slope and Elevation"
    ]
   },
   {
@@ -46361,180 +46369,166 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wilderness Areas\n",
-    "\n",
-    "Wilderness_Area1, Wilderness_Area2, Wilderness_Area3, Wilderness_Area4"
+    "### Wilderness Areas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "Area 1",
+         "type": "bar",
+         "x": [
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7
+         ],
+         "y": [
+          0.49,
+          0.52,
+          null,
+          null,
+          0.4,
+          null,
+          0.25
+         ]
+        },
+        {
+         "name": "Area 2",
+         "type": "bar",
+         "x": [
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7
+         ],
+         "y": [
+          0.08,
+          0.03,
+          null,
+          null,
+          null,
+          null,
+          0.12
+         ]
+        },
+        {
+         "name": "Area 3",
+         "type": "bar",
+         "x": [
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7
+         ],
+         "y": [
+          0.42,
+          0.44,
+          0.4,
+          null,
+          0.6,
+          0.45,
+          0.63
+         ]
+        },
+        {
+         "name": "Area 4",
+         "type": "bar",
+         "x": [
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7
+         ],
+         "y": [
+          null,
+          0.01,
+          0.6,
+          1,
+          null,
+          0.55,
+          null
+         ]
+        }
+       ],
+       "layout": {
+        "barmode": "group",
+        "title": "Wilderness Area",
+        "xaxis": {
+         "title": "Cover Type"
+        },
+        "yaxis": {
+         "title": "Fraction"
+        }
+       }
+      },
       "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Wilderness_Area1</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Wilderness_Area2</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Wilderness_Area3</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Wilderness_Area4</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>std</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>mean</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cover_Type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.500046</td>\n",
-       "      <td>0.491667</td>\n",
-       "      <td>0.277146</td>\n",
-       "      <td>0.083796</td>\n",
-       "      <td>0.494387</td>\n",
-       "      <td>0.424537</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.499490</td>\n",
-       "      <td>0.525000</td>\n",
-       "      <td>0.172150</td>\n",
-       "      <td>0.030556</td>\n",
-       "      <td>0.495896</td>\n",
-       "      <td>0.435185</td>\n",
-       "      <td>0.095801</td>\n",
-       "      <td>0.009259</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.489917</td>\n",
-       "      <td>0.399537</td>\n",
-       "      <td>0.489917</td>\n",
-       "      <td>0.600463</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.489241</td>\n",
-       "      <td>0.396296</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.489241</td>\n",
-       "      <td>0.603704</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.497122</td>\n",
-       "      <td>0.445370</td>\n",
-       "      <td>0.497122</td>\n",
-       "      <td>0.554630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.434442</td>\n",
-       "      <td>0.252315</td>\n",
-       "      <td>0.321097</td>\n",
-       "      <td>0.116667</td>\n",
-       "      <td>0.482641</td>\n",
-       "      <td>0.631019</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "<div id=\"93b89304-acac-4e45-8b14-303862710892\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"93b89304-acac-4e45-8b14-303862710892\", [{\"type\": \"bar\", \"x\": [1, 2, 3, 4, 5, 6, 7], \"y\": [0.49, 0.52, null, null, 0.4, null, 0.25], \"name\": \"Area 1\"}, {\"type\": \"bar\", \"x\": [1, 2, 3, 4, 5, 6, 7], \"y\": [0.08, 0.03, null, null, null, null, 0.12], \"name\": \"Area 2\"}, {\"type\": \"bar\", \"x\": [1, 2, 3, 4, 5, 6, 7], \"y\": [0.42, 0.44, 0.4, null, 0.6, 0.45, 0.63], \"name\": \"Area 3\"}, {\"type\": \"bar\", \"x\": [1, 2, 3, 4, 5, 6, 7], \"y\": [null, 0.01, 0.6, 1.0, null, 0.55, null], \"name\": \"Area 4\"}], {\"barmode\": \"group\", \"title\": \"Wilderness Area\", \"xaxis\": {\"title\": \"Cover Type\"}, \"yaxis\": {\"title\": \"Fraction\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
-      "text/plain": [
-       "           Wilderness_Area1           Wilderness_Area2            \\\n",
-       "                        std      mean              std      mean   \n",
-       "Cover_Type                                                         \n",
-       "1                  0.500046  0.491667         0.277146  0.083796   \n",
-       "2                  0.499490  0.525000         0.172150  0.030556   \n",
-       "3                  0.000000  0.000000         0.000000  0.000000   \n",
-       "4                  0.000000  0.000000         0.000000  0.000000   \n",
-       "5                  0.489241  0.396296         0.000000  0.000000   \n",
-       "6                  0.000000  0.000000         0.000000  0.000000   \n",
-       "7                  0.434442  0.252315         0.321097  0.116667   \n",
-       "\n",
-       "           Wilderness_Area3           Wilderness_Area4            \n",
-       "                        std      mean              std      mean  \n",
-       "Cover_Type                                                        \n",
-       "1                  0.494387  0.424537         0.000000  0.000000  \n",
-       "2                  0.495896  0.435185         0.095801  0.009259  \n",
-       "3                  0.489917  0.399537         0.489917  0.600463  \n",
-       "4                  0.000000  0.000000         0.000000  1.000000  \n",
-       "5                  0.489241  0.603704         0.000000  0.000000  \n",
-       "6                  0.497122  0.445370         0.497122  0.554630  \n",
-       "7                  0.482641  0.631019         0.000000  0.000000  "
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"93b89304-acac-4e45-8b14-303862710892\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"93b89304-acac-4e45-8b14-303862710892\", [{\"type\": \"bar\", \"x\": [1, 2, 3, 4, 5, 6, 7], \"y\": [0.49, 0.52, null, null, 0.4, null, 0.25], \"name\": \"Area 1\"}, {\"type\": \"bar\", \"x\": [1, 2, 3, 4, 5, 6, 7], \"y\": [0.08, 0.03, null, null, null, null, 0.12], \"name\": \"Area 2\"}, {\"type\": \"bar\", \"x\": [1, 2, 3, 4, 5, 6, 7], \"y\": [0.42, 0.44, 0.4, null, 0.6, 0.45, 0.63], \"name\": \"Area 3\"}, {\"type\": \"bar\", \"x\": [1, 2, 3, 4, 5, 6, 7], \"y\": [null, 0.01, 0.6, 1.0, null, 0.55, null], \"name\": \"Area 4\"}], {\"barmode\": \"group\", \"title\": \"Wilderness Area\", \"xaxis\": {\"title\": \"Cover Type\"}, \"yaxis\": {\"title\": \"Fraction\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
-     "execution_count": 106,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "feats = [\"Wilderness_Area1\", \"Wilderness_Area2\",  \"Wilderness_Area3\", \"Wilderness_Area4\"]\n",
     "\n",
-    "train.groupby(\"Cover_Type\")[feats].agg([\"std\", \"mean\"])"
+    "train[\"Wilderness_Area\"] = ((1 * train[\"Wilderness_Area1\"]) +\n",
+    "                            (2 * train[\"Wilderness_Area2\"]) +\n",
+    "                            (3 * train[\"Wilderness_Area3\"]) +\n",
+    "                            (4 * train[\"Wilderness_Area4\"])).map(str)\n",
+    "\n",
+    "vcs = pd.DataFrame()\n",
+    "for cover_type in range(1, 8):\n",
+    "    temp = train[train[\"Cover_Type\"] == cover_type]\n",
+    "    vc   = temp[\"Wilderness_Area\"].value_counts()\n",
+    "    size = len(temp)\n",
+    "    vc   = (vc / size).round(2)\n",
+    "    vc = pd.DataFrame(vc).T\n",
+    "    vc.index = [cover_type]\n",
+    "    vcs = pd.concat([vcs, vc])\n",
+    "\n",
+    "plotly_data = []\n",
+    "for area in range(1, 5):\n",
+    "    vc = vcs[str(area)]\n",
+    "    trace = go.Bar(\n",
+    "        x=vc.index,\n",
+    "        y=vc.values,\n",
+    "        name=f\"Area {area}\"\n",
+    "    )\n",
+    "    plotly_data.append(trace)\n",
+    "    \n",
+    "layout = go.Layout(\n",
+    "    barmode = 'group',\n",
+    "    title   = \"Wilderness Area\",\n",
+    "    xaxis   = dict(title = \"Cover Type\"),\n",
+    "    yaxis   = dict(title = \"Fraction\")\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=plotly_data, layout=layout)\n",
+    "iplot(fig);"
    ]
   },
   {
@@ -46635,6 +46629,106 @@
     "\n",
     "alt.vconcat(soil_types_train, soil_types_test)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Roadways and Fire Points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "feats = [\"Horizontal_Distance_To_Roadways\", \"Horizontal_Distance_To_Fire_Points\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "bar",
+         "x": [
+          2,
+          1,
+          3,
+          7,
+          6,
+          5,
+          4
+         ],
+         "y": [
+          253621,
+          217307,
+          34269,
+          21782,
+          18303,
+          18279,
+          2331
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Cover Type shown in Predictions (Score: 81% accurate)",
+        "yaxis": {
+         "title": "Count"
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"df8b2de4-df60-4850-ac04-9ce7e7091925\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"df8b2de4-df60-4850-ac04-9ce7e7091925\", [{\"type\": \"bar\", \"x\": [2, 1, 3, 7, 6, 5, 4], \"y\": [253621, 217307, 34269, 21782, 18303, 18279, 2331]}], {\"title\": \"Cover Type shown in Predictions (Score: 81% accurate)\", \"yaxis\": {\"title\": \"Count\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"df8b2de4-df60-4850-ac04-9ce7e7091925\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"df8b2de4-df60-4850-ac04-9ce7e7091925\", [{\"type\": \"bar\", \"x\": [2, 1, 3, 7, 6, 5, 4], \"y\": [253621, 217307, 34269, 21782, 18303, 18279, 2331]}], {\"title\": \"Cover Type shown in Predictions (Score: 81% accurate)\", \"yaxis\": {\"title\": \"Count\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc = predictions[\"Cover_Type\"].value_counts()\n",
+    "\n",
+    "trace = go.Bar(\n",
+    "    x=vc.index,\n",
+    "    y=vc.values,\n",
+    ")\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title   = \"Cover Type shown in Predictions (Score: 81% accurate)\",\n",
+    "    yaxis   = dict(title = \"Count\")\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=[trace], layout=layout)\n",
+    "iplot(fig);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
