added basic analysis

--- a/in_progress/costa_rica/submission.ipynb
+++ b/in_progress/costa_rica/submission.ipynb
@@ -94,215 +94,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>v2a1</th>\n",
-       "      <th>hacdor</th>\n",
-       "      <th>rooms</th>\n",
-       "      <th>hacapo</th>\n",
-       "      <th>v14a</th>\n",
-       "      <th>refrig</th>\n",
-       "      <th>v18q</th>\n",
-       "      <th>v18q1</th>\n",
-       "      <th>r4h1</th>\n",
-       "      <th>...</th>\n",
-       "      <th>SQBescolari</th>\n",
-       "      <th>SQBage</th>\n",
-       "      <th>SQBhogar_total</th>\n",
-       "      <th>SQBedjefe</th>\n",
-       "      <th>SQBhogar_nin</th>\n",
-       "      <th>SQBovercrowding</th>\n",
-       "      <th>SQBdependency</th>\n",
-       "      <th>SQBmeaned</th>\n",
-       "      <th>agesq</th>\n",
-       "      <th>Target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ID_279628684</td>\n",
-       "      <td>190000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1849</td>\n",
-       "      <td>1</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1849</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ID_f29eb3ddd</td>\n",
-       "      <td>135000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>144</td>\n",
-       "      <td>4489</td>\n",
-       "      <td>1</td>\n",
-       "      <td>144</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>144.0</td>\n",
-       "      <td>4489</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ID_68de51c94</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>121</td>\n",
-       "      <td>8464</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>121.0</td>\n",
-       "      <td>8464</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ID_d671db89c</td>\n",
-       "      <td>180000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>81</td>\n",
-       "      <td>289</td>\n",
-       "      <td>16</td>\n",
-       "      <td>121</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.777778</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>121.0</td>\n",
-       "      <td>289</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ID_d56d6f5f5</td>\n",
-       "      <td>180000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>121</td>\n",
-       "      <td>1369</td>\n",
-       "      <td>16</td>\n",
-       "      <td>121</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.777778</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>121.0</td>\n",
-       "      <td>1369</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 143 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Id      v2a1  hacdor  rooms  hacapo  v14a  refrig  v18q  v18q1  \\\n",
-       "0  ID_279628684  190000.0       0      3       0     1       1     0    NaN   \n",
-       "1  ID_f29eb3ddd  135000.0       0      4       0     1       1     1    1.0   \n",
-       "2  ID_68de51c94       NaN       0      8       0     1       1     0    NaN   \n",
-       "3  ID_d671db89c  180000.0       0      5       0     1       1     1    1.0   \n",
-       "4  ID_d56d6f5f5  180000.0       0      5       0     1       1     1    1.0   \n",
-       "\n",
-       "   r4h1   ...    SQBescolari  SQBage  SQBhogar_total  SQBedjefe  SQBhogar_nin  \\\n",
-       "0     0   ...            100    1849               1        100             0   \n",
-       "1     0   ...            144    4489               1        144             0   \n",
-       "2     0   ...            121    8464               1          0             0   \n",
-       "3     0   ...             81     289              16        121             4   \n",
-       "4     0   ...            121    1369              16        121             4   \n",
-       "\n",
-       "   SQBovercrowding  SQBdependency  SQBmeaned  agesq  Target  \n",
-       "0         1.000000            0.0      100.0   1849       4  \n",
-       "1         1.000000           64.0      144.0   4489       4  \n",
-       "2         0.250000           64.0      121.0   8464       4  \n",
-       "3         1.777778            1.0      121.0    289       4  \n",
-       "4         1.777778            1.0      121.0   1369       4  \n",
-       "\n",
-       "[5 rows x 143 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -467,7 +258,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "feats = ['idhogar', 'tamhog', 'agesq', \"edjefe\", \"edjefa\",\n",
